[project]
name = "GridControl"
version = "0.1.0"
description = "This project is a sandbox for congestion management exploration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym>=0.26.2",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.1",
    "pypowsybl>=1.8.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "typer>=0.13.1",
    "sqlalchemy>=2.0.37",
    "jax>=0.4.38",
    "mlflow>=2.19.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "optax>=0.2.4",
    "flax>=0.10.2",
    "structlog>=25.1.0",
    "torch>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
